# Smart-PDF-app

./: .gitignore  CMakeLists.txt  PRIVACY_POLICY.md  README.md  google-services.json  log2 - Copy.txt  prompt (2).txt  prompt.txt
android/: AndroidManifest.xml  build.gradle  google-services.json
android/res/drawable/: ic_launcher.xml
android/res/values/: strings.xml
android/src/main/: AndroidManifest.xml
android/src/main/java/com/pdfpilot/app/: FBAuth.java  PdfPilotActivity.java
android/src/main/java/io/smartpdf/app/: BillingHelper.java  FBAuth.java  RazorpayHelper.java  SmartPdfActivity.java
android/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/src/main/res/values/: strings.xml  styles.xml
android/src/main/res/xml/: file_paths.xml
docs/: IMPLEMENTATION_PLAN_AUTH.md
qml/: Main.qml
qml/components/: FilePickerButton.qml  ProgressOverlay.qml  PurchaseDialog.qml  ToastNotification.qml  UserProfileButton.qml
qml/screens/: AIScreen.qml  CompressScreen.qml  FoldersScreen.qml  HomeScreen.qml  LoginScreen.qml  MergeScreen.qml  PaywallScreen.qml  SettingsScreen.qml  SplitScreen.qml  ViewerScreen.qml
qml/theme/: Theme.qml
src/: main.cpp
src/core/: PDFDocument.cpp  PDFDocument.h  PDFEngine.cpp  PDFEngine.h
src/utils/: AIManager.cpp  AIManager.h  AuthManager.cpp  AuthManager.h  FileReceiver.cpp  FileReceiver.h  FileUtils.cpp  FileUtils.h  FolderManager.cpp  FolderManager.h  PDFTextExtractor.cpp  PDFTextExtractor.h  PaymentManager.cpp  PaymentManager.h  RecentActivityModel.cpp  RecentActivityModel.h  Settings.cpp  Settings.h  ShareUtils.cpp  ShareUtils.h  SubscriptionManager.cpp  SubscriptionManager.h
src/viewmodels/: MainViewModel.cpp  MainViewModel.h
